# yeti-python

./: README.md  pyproject.toml
.github/workflows/: e2e.yml  pypi_push.yml  unittests.yml
extras/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
tests/: api.py  e2e.py
yeti/: api.py  client.py  errors.py
yeti-python/: client.py
yeti-python/lib/: yeti.py
