[tool.poetry]
name = "yeti-python"
version = "2.1.1"
description = "Python bindings for the Yeti API"
authors = ["tomchop"]
license = "Apache"
readme = "README.md"
packages = [
    { include = "yeti" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
click = "^8.1.7"
requests-toolbelt = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
